--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "itsdangerous>=2.2.0",
     "black>=25.1.0",
     "yookassa>=3.7.0",
+    "redis>=4.6.0",
 ]
 
 [dependency-groups]
