--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
     command: ../.venv/bin/python run_main.py
     networks:
       - app-network
+      - web
     depends_on:
       redis:
         condition: service_healthy
@@ -119,7 +120,8 @@ networks:
     ipam:
       config:
         - subnet: 172.28.0.0/16
-
+  web:
+    external: true
 volumes:
   uploads_volume:
   redis_data:
